# Easy-Serve

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_mgr.rs  java_mgr.rs  main.rs  server_cmd.rs
src/components/: Layout.tsx  NewServerModal.tsx
src/pages/: Console.tsx  Dashboard.tsx  JavaManager.tsx  Mods.tsx  Network.tsx  Plugins.tsx  Settings.tsx
src/stores/: serverStore.ts
