[package]
name = "easyserve"
version = "0.1.0"
description = "EasyServe — Minecraft Server Manager"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-shell  = "2"
tauri-plugin-fs     = "2"
tauri-plugin-store  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http   = "2"

tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
regex       = "1"
reqwest     = { version = "0.12", features = ["stream", "json"] }
zip         = "2"
anyhow      = "1"
