[package]
name = "easyserve"
version = "0.1.0"
description = "EasyServe — Minecraft Server Manager"
authors = ["you"]
edition = "2021"

[package.metadata.bundle]
name = "EasyServe"
identifier = "com.easyserve.app"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns", "icons/icon.ico"]
resources = []
copyright = "Copyright (c) 2025"
category = "DeveloperTool"
short_description = "Minecraft Server Manager"
long_description = "A fast, beautiful Windows desktop app for managing Minecraft servers."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-shell  = "2"
tauri-plugin-fs     = "2"
tauri-plugin-store  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http   = "2"

tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
regex       = "1"
reqwest     = { version = "0.12", features = ["stream", "json"] }
zip         = "2"
anyhow      = "1"
